--- a/docker/caddy/Dockerfile
+++ b/docker/caddy/Dockerfile
@@ -5,6 +5,6 @@ RUN xcaddy build \
     --with github.com/WeidiDeng/caddy-cloudflare-ip \
     --with github.com/caddy-dns/cloudflare
 
-FROM caddy:aline
+FROM caddy:alpine
 
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
