--- a/conf/wordpress/wordpress.env.example
+++ b/conf/wordpress/wordpress.env.example
@@ -3,4 +3,4 @@ WORDPRESS_DB_PASSWORD=mysuperstrongpassword
 WORDPRESS_DB_NAME=wordpress
 
 # By default the database host is set to the service name of the database container
-WORDPRESS_DB_HOST=db:3306
+WORDPRESS_DB_HOST=mariadb:3306
