Update confs with quotes

--- a/conf/caddy/caddy.env.example
+++ b/conf/caddy/caddy.env.example
@@ -1,2 +1,2 @@
-SERVER_NAME=wordpress.example.com
-CLOUDFLARE_API_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+SERVER_NAME="wordpress.example.com"
+CLOUDFLARE_API_TOKEN="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
