--- a/conf/db/db.env.example
+++ b/conf/db/db.env.example
@@ -1,4 +1,4 @@
-MYSQL_USER=wordpress
-MYSQL_PASSWORD=mysuperstrongpassword
-MYSQL_DATABASE=wordpress
-MYSQL_ROOT_PASSWORD=myevenstrongerpassword
+MYSQL_USER="wordpress"
+MYSQL_PASSWORD="mysuperstrongpassword"
+MYSQL_DATABASE="wordpress"
+MYSQL_ROOT_PASSWORD="myevenstrongerpassword"
