--- a/conf/wordpress/php.ini
+++ b/conf/wordpress/php.ini
@@ -2,5 +2,6 @@ php_memory_limit=1024M
 post_max_size=100M
 upload_max_filesize=100M
 max_execution_time=300
+max_input_vars=3000
 php_enable_xdebug=false
 debug=false
