Increase memory limit in WP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       WORDPRESS_CONFIG_EXTRA: |
         define('WP_REDIS_HOST', 'redis');
         define('WP_REDIS_PORT', '6379');
+        define('WP_MEMORY_LIMIT', '768M');
     networks:
       - wordpress
 
