--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
         define('WP_REDIS_HOST', 'redis');
         define('WP_REDIS_PORT', '6379');
         define('WP_MEMORY_LIMIT', '768M');
+        define('WP_MAX_MEMORY_LIMIT', '1024M');
     networks:
       - wordpress
 
