--- a/conf/caddy/Caddyfile
+++ b/conf/caddy/Caddyfile
@@ -27,7 +27,7 @@
   respond @forbidden "Access denied" 403
 
   php_fastcgi wordpress:9000
-  file_server
+  file_server browse
 
   header / {
     Strict-Transport-Security max-age=31536000; includeSubDomains; preload;
