--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,9 @@ services:
         define('WP_REDIS_PORT', '6379');
         define('WP_MEMORY_LIMIT', '768M');
         define('WP_MAX_MEMORY_LIMIT', '1024M');
+        define('WP_DEBUG', false);
+        define('WP_DEBUG_LOG', false);
+        define('WP_DEBUG_DISPLAY', false);
     networks:
       - wordpress
 
