--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     hostname: redis
     image: redis:7-alpine
     restart: always
+    user: 0:0
     networks:
       - wordpress
 
@@ -17,6 +18,7 @@ services:
       - ./data/db:/var/lib/mysql
     env_file:
       - ./conf/db/db.env
+    user: 0:0
     networks:
       - wordpress
 
@@ -44,6 +46,7 @@ services:
         define('WP_DEBUG', false);
         define('WP_DEBUG_LOG', false);
         define('WP_DEBUG_DISPLAY', false);
+    user: 0:0
     networks:
       - wordpress
 
@@ -65,6 +68,7 @@ services:
       - "443:443/udp"
     env_file:
       - ./conf/caddy/caddy.env
+    user: 0:0
     networks:
       - wordpress
 
