--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
         define('WP_DEBUG', false);
         define('WP_DEBUG_LOG', false);
         define('WP_DEBUG_DISPLAY', false);
+        define('WP_CACHE', true);
     user: 0:0
     networks:
       - wordpress
